backend/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: my-app
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 381492217945.dkr.ecr.us-east-1.amazonaws.com/backend-test:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000


---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: my-app
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: backend
